@@ -11,6 +11,7 @@ Bug fixes:
 - Fixed bugs in the upgrade that stopped an upgrade from CPS 3.2.4.
 - Take the portal type allow_discussion attribute into account when
   creating a document.
+- #1527 (partial): remove=True doesn't fail if object doesn't exist.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Minor ZPT optimization.
